# rvector

./: .gitignore  Cargo.toml  README.md  Readme.md  TODO.md  demo.rvdb
benches/: benchmark.rs
benchmarks/: readme.md
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml  readme.md
client/src/: main.rs
docs/: book.toml
examples/: load_test.rs
server/: readme.md
src/: lib.rs
tools/: readme.md
tools/logger/: Cargo.toml
tools/monitor/: Cargo.toml
tools/tests/: Cargo.toml
