[package]
name = "client"
edition = "2021"
version.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true

[dependencies]
assets = { git = "https://github.com/zed-industries/zed" }
gpui = { git = "https://github.com/zed-industries/zed" }
theme = { git = "https://github.com/zed-industries/zed" }
settings = { git = "https://github.com/zed-industries/zed" }
ui = { git = "https://github.com/zed-industries/zed" }

[lints]
workspace = true
